# octans

./: Cargo.toml  README.md
.github/workflows/: ci.yml
crates/octans-codegen/: Cargo.toml
crates/octans-codegen/src/: lib.rs
crates/octans-codegen/tests/: codegen.rs
crates/octans-core/: Cargo.toml
crates/octans-core/src/: body.rs  catalog.rs  context.rs  control.rs  gather.rs  graph.rs  group.rs  interp.rs  lib.rs  map.rs  node.rs  params.rs  portal.rs  prims.rs  profile.rs  registry.rs  serial.rs  std_nodes.rs  strategy.rs  value.rs  viz.rs
crates/octans-core/tests/: robust.rs  slice.rs
crates/octans-gui/: Cargo.toml
crates/octans-gui/src/: canvas.rs  history.rs  inspector.rs  layout.rs  lib.rs  log_panel.rs  main.rs  model.rs  palette.rs  params.rs  profiler.rs  pyxis.rs  scene.rs  schedule.rs  templates.rs
crates/octans-gui/tests/: edit.rs
crates/octans-macros/: Cargo.toml
crates/octans-macros/src/: lib.rs
crates/octans-nodes/: Cargo.toml
crates/octans-nodes/examples/: diagnostics.rs  tracker.rs  tracker_replay.rs  visualize.rs
crates/octans-nodes/src/: diag.rs  imageops.rs  lib.rs  mathx.rs  recfile.rs  tracking.rs  vecx.rs
crates/octans-nodes/tests/: body_spec.rs  catalog.rs  control.rs  diag.rs  dyn_construct.rs  edit.rs  fanout.rs  feedback.rs  groups.rs  map.rs  map_group.rs  mathx.rs  params.rs  portal.rs  profile.rs  recfile.rs  scheduler.rs  serial.rs  slice.rs  state.rs  strategy.rs  tracker.rs  tracking.rs  tune.rs  vec_image.rs  viz.rs  zero_copy.rs
