[package]
name = "octans-codegen"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Lower an Octans graph (IR) to Rust source — the start of the AOT (Canopus) path."

[dependencies]
octans-core = { path = "../octans-core" }
serde_json = "1"

[dev-dependencies]
syn = { version = "2", features = ["full", "parsing"] }
octans-nodes = { path = "../octans-nodes" }
