[package]
name = "octans-core"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Octans engine core — graph model, open type registry, and the Mira interpreter."

[dependencies]
# none yet — the v0 vertical slice is pure std, by design (zero setup, instant compile).
