[package]
name = "octans-core"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Octans engine core — graph model, open type registry, and the Mira interpreter."

[dependencies]
rayon = "1"                                      # data-parallel fan-out (Map)
serde = { version = "1", features = ["derive"] } # graph (de)serialization
serde_json = "1"
