[package]
name = "octans-gui"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Octans realtime graph visualizer (read-only) — egui/eframe glow backend."

[dependencies]
octans-core = { path = "../octans-core" }
octans-nodes = { path = "../octans-nodes" }
# glow (OpenGL, no discrete GPU needed) + the Linux backends, but WITHOUT accesskit: its startup
# connect to the a11y D-Bus can block the first frame on a cold bus (the window then shows as "not
# responding" on first launch). default-features=false also keeps wgpu out (it's not default anyway).
eframe = { version = "0.31", default-features = false, features = [
    "glow",
    "default_fonts",
    "wayland",
    "x11",
] }
log = "0.4"
env_logger = "0.11"

[[bin]]
name = "octans-gui"
path = "src/main.rs"
