[package]
name = "octans-macros"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Procedural macros for Octans — the #[node] authoring attribute."

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
