[package]
name = "octans-nodes"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Octans standard nodes (dogfooding the #[node] macro)."

[dependencies]
octans-core = { path = "../octans-core" }
octans-macros = { path = "../octans-macros" }
