[package]
name = "octans-nodes"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Octans standard nodes (dogfooding the #[node] macro)."

[dependencies]
octans-core = { path = "../octans-core" }
octans-macros = { path = "../octans-macros" }
nalgebra = "0.33" # linear algebra for triangulation (SVD)
serde = { version = "1", features = ["derive"] } # node config (de)serialization
serde_json = "1"
